# hxam-mvp

./: .gitignore  README.md  chat_history_class.py  hybridx_server.py  hybridx_ui.html  index.html  llm_client.py  main.py  proxy_server.py  proxy_server.py.before_json_fix  pyproject.toml  start_hxam.bat  start_hxam_proxy.bat  stop_hxam.bat  stop_hxam_proxy.bat  system_prompt.txt
config/: hxam_mvp.yaml
hxam_mvp/web/: main.py
