[project]
name = "hxam-mvp"
version = "0.1.0"
description = "Hybrid-X Anomaly Miner MVP"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.24",
    "fastapi>=0.104",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
